--- a/src/assets/style/header.scss
+++ b/src/assets/style/header.scss
@@ -2,7 +2,7 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 60px;
+    margin-bottom: 30px;
     img{
         width: 210px;
     }
@@ -26,6 +26,7 @@ header{
 
 @media screen and (max-width: 530px){
     header{
+    margin-bottom: 20px;
        img{
         width: 120px;
        } 
